--- a/app/src/main/res/layout/layout_content_item.xml
+++ b/app/src/main/res/layout/layout_content_item.xml
@@ -7,6 +7,7 @@
     android:layout_marginTop="@dimen/dp_5"
     android:layout_marginBottom="@dimen/dp_5"
     android:foreground="?attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/bg_card_view"
     >
     <LinearLayout
         android:orientation="vertical"
