--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -9,11 +9,13 @@
     <include layout="@layout/layout_common_toolbar"/>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
         <FrameLayout
             android:id="@+id/page_content_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/common_bg">
 
         </FrameLayout>
     </FrameLayout>
