--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -15,6 +15,7 @@
         android:id="@+id/page_content_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/common_bg"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
@@ -31,6 +32,7 @@
                 android:id="@+id/collection_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/common_bg"
                 >
 
             </androidx.recyclerview.widget.RecyclerView>
