--- a/app/src/main/res/layout/activity_common_web.xml
+++ b/app/src/main/res/layout/activity_common_web.xml
@@ -9,7 +9,8 @@
     <include layout="@layout/layout_common_toolbar"/>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/common_bg">
         <com.zhy.view.flowlayout.TagFlowLayout
             android:id="@+id/common_web_flow_layout"
             android:layout_width="match_parent"
