--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:id="@+id/main_fragment_container_fl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/common_bg"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
         </FrameLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
