--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Register.RegisterActivity">
+    tools:context=".Register.RegisterActivity"
+    android:background="@color/common_bg">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -32,12 +33,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dp_40"
+        android:background="@color/common_bg"
         android:elevation="@dimen/dp_3">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_60"
+            android:layout_margin="@dimen/dp_40"
             >
             <EditText
                 android:id="@+id/register_email_et"
