--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -54,7 +54,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/dp_20">
+        android:padding="@dimen/dp_20"
+        android:background="@color/common_bg">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -100,6 +101,7 @@
                 android:id="@+id/search_history_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/common_bg"
                 >
 
             </androidx.recyclerview.widget.RecyclerView>
