--- a/app/src/main/res/layout/activity_search_list.xml
+++ b/app/src/main/res/layout/activity_search_list.xml
@@ -28,7 +28,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/search_list_rv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/common_bg">
 
             </androidx.recyclerview.widget.RecyclerView>
             <com.scwang.smartrefresh.layout.footer.ClassicsFooter
