--- a/app/src/main/res/layout/dialog_common_layout.xml
+++ b/app/src/main/res/layout/dialog_common_layout.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
-             android:background="@color/common_bg"
+             android:background="@color/bg_card_view"
              android:orientation="vertical">
 
     <LinearLayout
