--- a/app/src/main/res/layout/fragment_knowledge_list.xml
+++ b/app/src/main/res/layout/fragment_knowledge_list.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/knowledge_list_rv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/common_bg"
                 >
 
             </androidx.recyclerview.widget.RecyclerView>
