--- a/app/src/main/res/layout/fragment_nav.xml
+++ b/app/src/main/res/layout/fragment_nav.xml
@@ -36,7 +36,8 @@
                 android:layout_height="match_parent"
                 android:scrollbarThumbVertical="@color/tab_item_default"
                 android:scrollbarSize="3dp"
-                android:scrollbars="vertical">
+                android:scrollbars="vertical"
+                android:background="@color/common_bg">
 
             </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
