--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -20,7 +20,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabMode="scrollable"
-                app:tabGravity="fill">
+                app:tabGravity="fill"
+                android:background="@color/toolbar"
+                app:tabTextColor="@color/tab_text_default"
+                app:tabSelectedTextColor="@color/tab_text_select"
+                app:tabIndicator="@color/tab_indicator"
+                >
             </com.google.android.material.tabs.TabLayout>
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/project_view_pager"
