--- a/app/src/main/res/layout/fragment_wxlist.xml
+++ b/app/src/main/res/layout/fragment_wxlist.xml
@@ -21,7 +21,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/wx_list_rv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/common_bg">
             </androidx.recyclerview.widget.RecyclerView>
             <com.scwang.smartrefresh.layout.footer.ClassicsFooter
                 android:layout_width="match_parent"
