--- a/app/src/main/res/layout/layout_error_view.xml
+++ b/app/src/main/res/layout/layout_error_view.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/error_group_fl"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/common_bg">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
@@ -30,6 +31,7 @@
             android:text="@string/reload"
             android:layout_marginTop="@dimen/dp_10"
             android:layout_gravity="center_horizontal"
+            android:textColor="@color/common_text_default"
             android:background="@drawable/bg_reload_btn"/>
     </LinearLayout>
 </FrameLayout>
