--- a/app/src/main/res/layout/layout_favorite_adapter_item.xml
+++ b/app/src/main/res/layout/layout_favorite_adapter_item.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/dp_0"
     android:layout_marginBottom="@dimen/dp_5"
-    android:layout_marginTop="@dimen/dp_5">
+    android:layout_marginTop="@dimen/dp_5"
+    app:cardBackgroundColor="@color/bg_card_view">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
