--- a/app/src/main/res/layout/layout_home_item.xml
+++ b/app/src/main/res/layout/layout_home_item.xml
@@ -6,6 +6,7 @@
     app:cardCornerRadius="@dimen/dp_0"
     android:layout_marginBottom="@dimen/dp_5"
     android:layout_marginTop="@dimen/dp_5"
+    app:cardBackgroundColor="@color/bg_card_view"
     android:foreground="?attr/selectableItemBackground"
     >
     <LinearLayout
