--- a/app/src/main/res/layout/layout_knowledge_item.xml
+++ b/app/src/main/res/layout/layout_knowledge_item.xml
@@ -9,6 +9,7 @@
     android:layout_marginBottom="@dimen/dp_5"
     android:layout_marginLeft="@dimen/dp_2"
     android:layout_marginRight="@dimen/dp_2"
+    android:background="@color/common_bg"
     android:foreground="?attr/selectableItemBackground"
     >
     <LinearLayout
