--- a/app/src/main/res/layout/layout_loading_view.xml
+++ b/app/src/main/res/layout/layout_loading_view.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/loading_group_fl"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/common_bg">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
