--- a/app/src/main/res/layout/layout_main_drawer_header.xml
+++ b/app/src/main/res/layout/layout_main_drawer_header.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sp_20"
-            android:textColor="@color/common_bg"
+            android:textColor="@color/drawer_header_text"
             android:text="@string/login"
             android:layout_marginTop="@dimen/dp_10"
             android:layout_gravity="center_horizontal"/>
