--- a/app/src/main/res/layout/layout_nav_adapter_item.xml
+++ b/app/src/main/res/layout/layout_nav_adapter_item.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/dp_10">
+    android:padding="@dimen/dp_10"
+    android:background="@color/common_bg">
     <TextView
         android:id="@+id/nav_item_title_tv"
         android:layout_width="wrap_content"
