没有实现夜间模式

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/common_bg">
         <ImageView
             android:id="@+id/login_back_iv"
             android:layout_width="@dimen/dp_20"
@@ -25,6 +26,7 @@
         android:text="@string/login"
         android:textSize="@dimen/sp_36"
         android:gravity="center"
+        android:background="@color/common_bg"
         android:textColor="@color/common_text_default"
         android:layout_marginTop="@dimen/dp_30"
         />
@@ -72,7 +74,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:background="@color/common_bg">
         <Button
             android:id="@+id/login_login_btn"
             android:layout_width="match_parent"
