--- a/app/src/main/res/layout/layout_main_drawer_header.xml
+++ b/app/src/main/res/layout/layout_main_drawer_header.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:background="@color/colorPrimary">
+    android:background="@color/bg_primary">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
